--- a/source/App.css
+++ b/source/App.css
@@ -1,93 +1,23 @@
-
-        *{
-    margin: 0;
-    padding: 0;
+*{
+    margin:0;
+    padding:0;
     font-family: 'Poppins', sans-serif;
 }
-
-body{
-            background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
-    background-position: center;
-    background-size: cover;
+.header{
+    min-height:100vh;
+    width:100;
+    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("images/backGround.jpg");
+    background-position:center;
+    background-size:cover;
     position: relative;
-    min-height: 100vh;
-    width: 100%;
-    
-    
-    }
-       
-
-        
-        ul{
-            list-style-type: none;
-            padding: 0px;
-            margin: 0px;
-            width: 1045px;
-            text-align: center;
-        }
-        a{
-            text-decoration: none;
-            font-size: 30px;
-            color: black;
-        }
-        li{
-            display: inline-block;
-            padding: 10px;
-           
-            
-            
-        }
-        .li1:hover{
-   
-    background: rgba(0, 0, 255, 0.199);
-    transition: 1s;
 }
-        nav{
-            padding: 0px;
-            
-            
-        }
-        .logo{
-            width:120px ;
-            align-items: left;
-          
-        }
-        
-        
-   
-
-
-.text-box{
-    width: 1000px;
-    color: #fff;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    
+nav{
+    display: flex;
+    padding:5px 10px;
+    justify-content: space-between;
+    align-items: center;
 }
-.text-box h1{
-    font-size: 62px;
-}
-.text-box p{
-    margin:10px 0 40px;
-    font-size:14px;
-    color:#fff;
-}
-.Buton{
-    display: inline-block;
-    text-decoration: none;
-    color:#fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size:13px;
-    background: transparent;
-    position: relative;
-    cursor:pointer;
-    
-}
-.Buton:hover{
-    border:1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
+nav img{
+    width:93px;
+    height:74px;
 }
