--- a/source/News.css
+++ b/source/News.css
@@ -45,18 +45,84 @@ nav{
     align-items: left;
   
 }
-.center1{
-    margin-left: auto;
-margin-right: auto;
-padding: 20px;
+.text-box{
+width:90%;
+color: #fff;
+position: absolute;
+top:50%;
+left:50%;
+transform: translate(-50%,-50%);
+text-align: center;
 }
-img{
-    
-    width: 80px;
-    align-items: left;
+.text-box h1{
+font-size: 62px;
+}
+.text-box p{
+margin:10px 0 40px;
+font-size:14px;
+color:#fff;
+}
+.Buton{
+display: inline-block;
+text-decoration: none;
+color:#fff;
+border: 1px solid #fff;
+padding: 12px 34px;
+font-size:13px;
+background: transparent;
+position: relative;
+cursor:pointer;
+}
+.Buton:hover{
+border:1px solid #f44336;
+background: #f44336;
+transition: 1s;
+}
+
+.container{
+margin: 0 auto;
+padding: 1rem;
+width: 1000px;
+max-width: 100%;
+color:#fff;
+}
+.text-center {
+text-align: center;
 
 }
-.container{
-    position: relative;
+.row{
+display: flex;
+}
+.col{
+padding: 1rem;
+flex: 1;
+}
+.col:not(:last-child){
+border-right: 2px solid #c4c4c4;
+}
+h3{
+margin: 10px 0;
+
+}
+img{
+max-width: 100%;
+}
+
+main p {
+line-height: 1.5rem;
+letter-spacing: 1px;
+}
+
+#more {display: none;}
+
+footer{ padding: 20px;
    
+   text-align: center;
+ 
+}
+iframe{
+   padding: 20px;
+   width: 50%;
+   height: 300px;
+
 }
