--- a/source/index.css
+++ b/source/index.css
@@ -21,7 +21,7 @@ ul{
 a{
     text-decoration: none;
     font-size: 30px;
-    color: black;
+    color: white;
 }
 li{
     display: inline-block;
