--- a/source/About1.css
+++ b/source/About1.css
@@ -26,9 +26,10 @@ body{
             text-align: center;
         }
         a{
-            text-decoration: none;
-            font-size: 30px;
-            color: black;
+            font-family: monospace;
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
         }
         li{
             display: inline-block;
@@ -87,6 +88,35 @@ body{
     
 }
 .Buton:hover{
+    border:1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+footer{ padding: 20px;
+   
+    text-align: center;
+    background-color: darkblue;
+  
+}
+iframe{
+    padding: 20px;
+    width: 50%;
+    height: 300px;
+
+}
+.boton1{
+    display: inline-block;
+    text-decoration: none;
+    color:#fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size:13px;
+    background: transparent;
+    position: relative;
+    cursor:pointer;
+    
+}
+.boton1:hover{
     border:1px solid #f44336;
     background: #f44336;
     transition: 1s;
