--- a/source/index.css
+++ b/source/index.css
@@ -1,12 +1,25 @@
-body{
+*{
+    margin:0;
+    padding:0;
+    
+}
+.body
+{
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
 background-position: center;
 background-size: cover;
 position: relative;
 min-height: 100vh;
 width: 100%;
+height: 800px;
 
 
+}
+
+
+.widget{
+    background-color: darkblue;
+    margin-top: 0px;
 }
 
 
@@ -19,6 +32,7 @@ ul{
     text-align: center;
 }
 a{
+   font-family: monospace;
     text-decoration: none;
     font-size: 30px;
     color: white;
@@ -32,7 +46,7 @@ li{
 }
 .li1:hover{
 
-background: rgba(0, 0, 255, 0.199);
+background: black;
 transition: 1s;
 }
 nav{
@@ -57,8 +71,8 @@ img{
     align-items: left;
 
 }
+
 .container{
-    
     position: relative;
     
 }
@@ -120,13 +134,16 @@ top: 2px;
 }
 
 th{
+  
    color: white;
+
 }
 
 
 footer{ padding: 20px;
    
     text-align: center;
+    background-color: darkblue;
   
 }
 iframe{
