--- a/source/About1.css
+++ b/source/About1.css
@@ -1,123 +1,84 @@
-
-        *{
-    margin: 0;
-    padding: 0;
+*{
+    margin:0;
+    padding:0;
     font-family: 'Poppins', sans-serif;
 }
-
-body{
-            background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
-    background-position: center;
-    background-size: cover;
+.header{
+    min-height:100vh;
+    width:100;
+    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("images/backGround.jpg");
+    background-position:center;
+    background-size:cover;
     position: relative;
-    min-height: 100vh;
-    width: 100%;
-    
-    
-    }
-       
-
-        
-        ul{
-            list-style-type: none;
-            padding: 0px;
-            margin: 0px;
-            width: 1045px;
-            text-align: center;
-        }
-        a{
-            font-family: monospace;
-    text-decoration: none;
-    font-size: 30px;
-    color: white;
-        }
-        li{
-            display: inline-block;
-            padding: 10px;
-           
-            
-            
-        }
-        .li1:hover{
-   
-    background: rgba(0, 0, 255, 0.199);
-    transition: 1s;
 }
-        nav{
-            padding: 0px;
-            
-            
-        }
-        .logo{
-            width:120px ;
-            align-items: left;
-          
-        }
-        
-        
-   
-
-
-.text-box{
-    width: 1000px;
-    color: #fff;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    
+nav{
+    display: flex;
+    padding:5px 10px;
+    justify-content: space-between;
+    align-items: center;
 }
-.text-box h1{
-    font-size: 62px;
+nav img{
+    width:93px;
+    height:74px;
 }
-.text-box p{
-    margin:10px 0 40px;
-    font-size:14px;
-    color:#fff;
+.links{
+    flex:1;
+    text-align:center;
 }
-.Buton{
+.links ul li{
+    list-style:none;
     display: inline-block;
-    text-decoration: none;
-    color:#fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size:13px;
-    background: transparent;
+    padding:8px 12px;
     position: relative;
-    cursor:pointer;
-    
 }
-.Buton:hover{
-    border:1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
-}
-footer{ padding: 20px;
-   
-    text-align: center;
-    background-color: darkblue;
-  
-}
-iframe{
-    padding: 20px;
-    width: 50%;
-    height: 300px;
-
-}
-.boton1{
-    display: inline-block;
+.links ul li a{
+    color:white;
     text-decoration: none;
-    color:#fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size:13px;
-    background: transparent;
-    position: relative;
-    cursor:pointer;
-    
+    font-size:15px;
 }
-.boton1:hover{
-    border:1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
+.text{
+    width:80%;
+    color:white;
+    position:absolute;
+    top:35%;
+    left:5%;
+}
+p{
+    color:white;
+    position:absolute;
+    padding:5px;
+    margin:5%;
+    top:30%;
+}
+.fotooo0 img{
+    background-color: white;
+    position:absolute;
+    right:30%;
+    width:540px;
+    height:420px;
+}
+.Feedback{
+    width:1000px;
+    background-color: white;
+    top:170%;
+    left:16%;
+    padding:30px;
+    position:absolute;
+}
+form{
+    margin:35px;
+}
+.input-fieldd{
+    width:700px;
+    height:100px;
+    margin-top:20px;
+    padding-right:10px;
+    border:1px solid black;
+    border-radius: 10px;
+    outline:none;
+}
+.Butoni{
+    position:absolute;
+    top:245%;
+    left:48%;
 }
