--- a/source/About1.css
+++ b/source/About1.css
@@ -1,40 +1,63 @@
 *{
     margin:0;
     padding:0;
-    font-family: 'Poppins', sans-serif;
+    
 }
-.header{
-    min-height:100vh;
-    width:100;
-    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("images/backGround.jpg");
-    background-position:center;
-    background-size:cover;
-    position: relative;
+.body
+{
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
+background-position: center;
+background-size: cover;
+position: relative;
+min-height: 100vh;
+width: 100%;
+height: 800px;
+
+
+}
+
+
+.widget{
+    background-color: darkblue;
+    margin-top: 0px;
+}
+
+
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+    width: 1045px;
+    text-align: center;
+}
+a{
+   font-family: monospace;
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+}
+li{
+    display: inline-block;
+    padding: 10px;
+   
+    
+    
+}
+.li1:hover{
+
+background: black;
+transition: 1s;
 }
 nav{
-    display: flex;
-    padding:5px 10px;
-    justify-content: space-between;
-    align-items: center;
+    padding: 0px;
+    
+    
 }
-nav img{
-    width:93px;
-    height:74px;
-}
-.links{
-    flex:1;
-    text-align:center;
-}
-.links ul li{
-    list-style:none;
-    display: inline-block;
-    padding:8px 12px;
-    position: relative;
-}
-.links ul li a{
-    color:white;
-    text-decoration: none;
-    font-size:15px;
+.logo{
+    width:120px ;
+    align-items: left;
+  
 }
 .text{
     width:80%;
@@ -43,7 +66,7 @@ nav img{
     top:35%;
     left:5%;
 }
-p{
+.p1{
     color:white;
     position:absolute;
     padding:5px;
@@ -57,28 +80,45 @@ p{
     width:540px;
     height:420px;
 }
-.Feedback{
-    width:1000px;
-    background-color: white;
-    top:170%;
-    left:16%;
-    padding:30px;
-    position:absolute;
+footer{ padding: 20px;
+   
+    text-align: center;
+    background-color: darkblue;
+  
 }
-form{
-    margin:35px;
+iframe{
+    padding: 20px;
+    width: 50%;
+    height: 300px;
+
 }
-.input-fieldd{
-    width:700px;
-    height:100px;
-    margin-top:20px;
-    padding-right:10px;
-    border:1px solid black;
-    border-radius: 10px;
-    outline:none;
+.boton1{
+    display: inline-block;
+    text-decoration: none;
+    color:#fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size:13px;
+    background: transparent;
+    position: relative;
+    cursor:pointer;
+    
 }
-.Butoni{
-    position:absolute;
-    top:245%;
-    left:48%;
+.boton1:hover{
+    border:1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+.form1{
+   
+    color: white;
+    font-family: monospace;
+
+}
+.form2{
+    border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 1px solid white;
+  color: white;
 }
