--- a/source/App.css
+++ b/source/App.css
@@ -1,40 +1,63 @@
 *{
     margin:0;
     padding:0;
-    font-family: 'Poppins', sans-serif;
+    
 }
-.header{
-    min-height:100vh;
-    width:100;
-    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("images/backGround.jpg");
-    background-position:center;
-    background-size:cover;
-    position: relative;
+.body
+{
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
+background-position: center;
+background-size: cover;
+position: relative;
+min-height: 100vh;
+width: 100%;
+height: 900px;
+
+
+}
+
+
+.widget{
+    background-color: darkblue;
+    margin-top: 0px;
+}
+
+
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0px;
+    width: 1045px;
+    text-align: center;
+}
+a{
+   font-family: monospace;
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+}
+li{
+    display: inline-block;
+    padding: 10px;
+   
+    
+    
+}
+.li1:hover{
+
+background: black;
+transition: 1s;
 }
 nav{
-    display: flex;
-    padding:5px 10px;
-    justify-content: space-between;
-    align-items: center;
+    padding: 0px;
+    
+    
 }
-nav img{
-    width:93px;
-    height:74px;
-}
-.links{
-    flex:1;
-    text-align:center;
-}
-.links ul li{
-    list-style:none;
-    display: inline-block;
-    padding:8px 12px;
-    position: relative;
-}
-.links ul li a{
-    color:white;
-    text-decoration: none;
-    font-size:15px;
+.logo{
+    width:120px ;
+    align-items: left;
+  
 }
 .text{
     width:80%;
