--- a/source/News.css
+++ b/source/News.css
@@ -1,12 +1,25 @@
-body{
+*{
+    margin:0;
+    padding:0;
+    
+}
+.body
+{
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
 background-position: center;
 background-size: cover;
 position: relative;
 min-height: 100vh;
 width: 100%;
+height: 1050px;
 
 
+}
+
+
+.widget{
+    background-color: darkblue;
+    margin-top: 0px;
 }
 
 
@@ -19,7 +32,7 @@ ul{
     text-align: center;
 }
 a{
-    font-family: monospace;
+   font-family: monospace;
     text-decoration: none;
     font-size: 30px;
     color: white;
@@ -33,7 +46,7 @@ li{
 }
 .li1:hover{
 
-background: rgba(0, 0, 255, 0.199);
+background: black;
 transition: 1s;
 }
 nav{
@@ -118,12 +131,43 @@ letter-spacing: 1px;
 
 footer{ padding: 20px;
    
-   text-align: center;
- 
+    text-align: center;
+    background-color: darkblue;
+  
 }
 iframe{
-   padding: 20px;
-   width: 50%;
-   height: 300px;
+    padding: 20px;
+    width: 50%;
+    height: 300px;
 
+}
+.boton1{
+    display: inline-block;
+    text-decoration: none;
+    color:#fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size:13px;
+    background: transparent;
+    position: relative;
+    cursor:pointer;
+    
+}
+.boton1:hover{
+    border:1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+.form1{
+   
+    color: white;
+    font-family: monospace;
+
+}
+.form2{
+    border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 1px solid white;
+  color: white;
 }
