--- a/source/About1.css
+++ b/source/About1.css
@@ -5,6 +5,7 @@
 }
 .body
 {
+     /* prej lart posht */
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
 background-position: center;
 background-size: cover;
@@ -36,6 +37,7 @@ a{
     text-decoration: none;
     font-size: 30px;
     color: white;
+    text-shadow: 2px 2px black;
 }
 li{
     display: inline-block;
@@ -48,6 +50,7 @@ li{
 
 background: black;
 transition: 1s;
+
 }
 nav{
     padding: 0px;
@@ -65,6 +68,7 @@ nav{
     position:absolute;
     top:35%;
     left:5%;
+    
 }
 .p1{
     color:white;
@@ -72,14 +76,37 @@ nav{
     padding:5px;
     margin:5%;
     top:30%;
+
 }
+
+/* #multipleP{
+background-image: url(images/logoP1.png) , url(images/about2.png);
+background-position: left top ,center;
+position: absolute;
+
+} */
 .fotooo0 img{
+    
     background-color: white;
     position:absolute;
     right:30%;
     width:540px;
     height:420px;
 }
+.div1 {
+    width: 70px;
+    height: 70px;
+    padding: 10px;
+    border: 1px solid #aaaaaa;
+  }
+  .div2 { 
+  
+   margin-left: 100px;
+    width: 70px;
+    height: 70px;
+    padding: 10px;
+    border: 1px solid #aaaaaa;}
+
 footer{ padding: 20px;
    
     text-align: center;
@@ -106,7 +133,7 @@ iframe{
 }
 .boton1:hover{
     border:1px solid #f44336;
-    background: #f44336;
+   background: radial-gradient(#f44336,darkblue);
     transition: 1s;
 }
 .form1{
