--- a/source/News.css
+++ b/source/News.css
@@ -36,6 +36,7 @@ a{
     text-decoration: none;
     font-size: 30px;
     color: white;
+    text-shadow: 2px 2px black;
 }
 li{
     display: inline-block;
