--- a/source/App.css
+++ b/source/App.css
@@ -5,9 +5,11 @@
 }
 .body
 {
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
+background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
 background-position: center;
 background-size: cover;
+background-attachment: fixed;
+ /*ndryshim*/
 position: relative;
 min-height: 100vh;
 width: 100%;
@@ -79,23 +81,23 @@ nav{
 .foto{
    position:absolute;
    left:60%;
-   top:20%;
+   top:26%;
+   transform: scale(1.1);
 }
 .foto1{
     position:absolute;
-    left:75%;
-    top:17%;
+    left:71%;
+    top:24%;
+    transform: scale(1.1);
+    /*scale 1.1 u rrit figura per 0.1 ose 10% ma shume*/
 }
-.foto2 img{
-    width: 250px;
-    height: 85px;
+/*figurat*/
+#figure1{
     position:absolute;
     left:4%;
     top:65%;
 }
-.foto3 img{
-    width: 250px;
-    height: 85px;
+#figure2{
     position:absolute;
     left:26%;
     top:65%;
@@ -104,6 +106,8 @@ nav{
     position:absolute;
     left:20%;
     top:120%;
+    transform: translateX(20px);
+    /*Leviz djathtas per 20px*/
 }
 .tekstt{
     margin-left: 55%;
@@ -119,10 +123,14 @@ nav{
     position:absolute;
     left:50%;
     top:220%;
+    transform: rotate(2deg);
+    transform: skewX(4deg);
+    /*rotate,skew-*/
+
 }
 .problem{
     position: absolute;
-    left:10%;
+    left:13%;
     top: 215%;
 }
 .tekstt3{
@@ -131,7 +139,8 @@ nav{
 }
 .Form1 {
     width:300px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.952);
+    background-repeat: no-repeat;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
     box-shadow: 0 0 20px 0 #999;
     position:absolute;
@@ -165,4 +174,16 @@ form{
     font-size:10px;
     border:none;
     cursor:pointer;
+}
+/*ndryshim*/
+#svg1{
+    position: absolute;
+    left:10%;
+    top: 278%;
+}
+#svg2{
+    position: absolute;
+    left:20%;
+    top: 172%;
+    transform: translateX(20px);
 }
