--- a/source/App.css
+++ b/source/App.css
@@ -186,4 +186,22 @@ form{
     left:20%;
     top: 172%;
     transform: translateX(20px);
+} 
+/*pjesa e keyframe*/
+.circle{
+    background:#47c35a;
+    height:200px;
+    width:200px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translateX(20px);
+    transform: translateY(745%);
+    left:70%;
+    animation:mymove 5s infinite;
 }
+@keyframes mymove {
+    0%   {top: 0px;}
+    25%  {top: 200px;}
+    75%  {top: 50px}
+    100% {top: 100px;}
+  }
