--- a/source/App.css
+++ b/source/App.css
@@ -205,3 +205,7 @@ form{
     75%  {top: 50px;background: #1a7e29}
     100% {top: 100px;background: #147e24}
   }
+  #canvas
+  { border:1px solid black;
+    position:absolute;
+    top:170%; left:19%; }
