--- a/source/App.css
+++ b/source/App.css
@@ -86,7 +86,7 @@ nav{
 }
 .foto1{
     position:absolute;
-    left:71%;
+    left:73%;
     top:24%;
     transform: scale(1.1);
     /*scale 1.1 u rrit figura per 0.1 ose 10% ma shume*/
@@ -131,10 +131,10 @@ nav{
 .problem{
     position: absolute;
     left:13%;
-    top: 215%;
+    top: 230%;
 }
 .tekstt3{
-    margin-top:25%;
+    margin-top:27%;
     margin-left: 18%;
 }
 .Form1 {
@@ -178,26 +178,27 @@ form{
 /*ndryshim*/
 #svg1{
     position: absolute;
-    left:10%;
-    top: 278%;
+    left:9%;
+    top: 283%;
 }
 #svg2{
     position: absolute;
     left:20%;
-    top: 172%;
+    top: 180%;
     transform: translateX(20px);
 } 
 /*pjesa e keyframe*/
 .circle{
     background:#47c35a;
-    height:200px;
-    width:200px;
+    height:170px;
+    width:170px;
     border-radius: 50%;
     position: absolute;
     transform: translateX(20px);
-    transform: translateY(745%);
+    transform: translateY(750%);
     left:70%;
     animation:mymove 5s infinite;
+    outline: 1px dashed #47c35a;
 }
 @keyframes mymove {
     0%   {top: 0px;background: #47c35a}
@@ -208,4 +209,4 @@ form{
   #canvas
   { border:1px solid black;
     position:absolute;
-    top:170%; left:19%; }
+    top:178%; left:19%; }
