--- a/source/index.css
+++ b/source/index.css
@@ -9,6 +9,7 @@
 background-position:  center;
  /*e mbulon gjith faqen -16-2*/
 background-size: cover;
+background-attachment: fixed;
 position: relative;
 min-height: 100vh;
 width: 100%;
@@ -187,7 +188,10 @@ iframe{
   border-bottom: 1px solid white;
   color: white;
 }
-
+@font-face{
+    font-family: weather;
+    src: url(images/BioRhyme-Regular.ttf);
+}
 /* border-image: url(images/borderImg.png); */
 
 /*background-origin: content-box, padding-box;*/
