--- a/source/index.css
+++ b/source/index.css
@@ -7,13 +7,12 @@
 {
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/backGround.jpg);
 background-position:  center;
- /*e mbulon gjith faqen -16-2*/
 background-size: cover;
 background-attachment: fixed;
 position: relative;
 min-height: 100vh;
 width: 100%;
-height: 800px;
+height: 1800px;
 
 
 }
@@ -61,7 +60,29 @@ nav{
     
     
 }
+.widget1{
+    margin-top: 70px;
+    
+    text-align: center;
+    color: white;
+    font-family: monospace;
+}
+.widget2{
+    background-color: rgba(165, 42, 42, 0);
+    text-align: center;
 
+}
+.widget3{
+    background-color: rgba(165, 42, 42, 0);
+    text-align: center;
+    margin-top: -54px;
+    margin-right: -850px;
+}
+.widget4{
+    background-color: rgba(255, 255, 255, 0);
+    height: 40px;
+    width: 40px;
+}
 .logo{
     width:120px ;
     align-items: left;
@@ -161,7 +182,6 @@ iframe{
     display: inline-block;
     text-decoration: none;
     color:#fff;
-    /*kerkesa 14-2*/
     border: 1px solid #fff;
     padding: 12px 34px;
     font-size:13px;
